# mcp

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  Dockerfile.proxy  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yaml  docker-entrypoint.sh  go.mod  go.sum  goreleaser.panda.Dockerfile  goreleaser.proxy.Dockerfile  goreleaser.server.Dockerfile  proxy-config.example.yaml  pyproject.toml
.github/workflows/: build-master.yaml  build-pr.yaml  ci.yml  docker.yml  eval.yaml  goreleaser.yaml
cmd/ep-search/: main.go
cmd/proxy/: main.go  main_test.go
docs/: ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  architecture.md  deployments.md  openapi.yaml
extensions/dora/: extension.go  plugin.go
extensions/ethnode/: extension.go  plugin.go
extensions/loki/: plugin.go
extensions/prometheus/: extension.go
internal/github/: cache.go
internal/version/: version.go
modules/clickhouse/: config.go  coverage_test.go  examples.yaml  module.go  resources.go  schema.go  schema_additional_test.go  schema_test.go
modules/dora/: module.go  module_test.go
modules/loki/: module.go
modules/prometheus/: module.go
pkg/app/: app.go  app_test.go  bootstrap.go  sandbox_env.go
pkg/auth/: auth.go  auth_simple.go  auth_simple_test.go  config.go  success_page.go  success_page_test.go
pkg/cache/: cache.go  memory.go  memory_test.go  redis.go  redis_test.go
pkg/cli/: auth.go  clickhouse_cmd.go  coverage_test.go  docs.go  dora.go  ethnode.go  execute.go  getting_started.go  init.go  loki_cmd.go  prometheus_cmd.go  proxy_helpers.go  resources.go  root.go  schema.go  search.go  server.go  server_helpers.go  session.go  upgrade.go
pkg/clisearch/: search.go
pkg/config/: config.go  config_test.go
pkg/defaults/: defaults.go
pkg/eips/: fetcher.go  integration_test.go  registry.go
pkg/embedding/: embedder.go  remote.go  remote_test.go
pkg/execsvc/: service.go
pkg/extension/: extension.go  registry.go
pkg/grafana/: config.go  grafana.go
pkg/middleware/: ratelimit.go  ratelimit_test.go
runbooks/: blob_propagation_vs_getblobs.md  debug_devnet.md  finality_delay.md  loader.go  loader_test.go  registry.go  slow_query.md
sandbox/: Dockerfile  requirements.txt
tests/: __init__.py
(+214 files in other folders)
